--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: YOUR_POSTGRES_USERNAME
+      POSTGRES_PASSWORD: YOUR_POSTGRES_PASSWORD
       POSTGRES_DB: lung_risk
     volumes:
       - db-data:/var/lib/postgresql/data
